navbar layout shift fix

--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -13,6 +13,8 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	position: relative;
+	z-index: 8;
 }
 
 .tLeft {
@@ -184,8 +186,6 @@
 	background-color: #131921;
 	flex-direction: column;
 	padding: 10px;
-	position: relative;
-	z-index: -1;
 	transition: transform 0.3s ease-in-out;
 }
 
